--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>DPE Data Management</title>
+        <title>PIEB With DPE Data Management</title>
 
         <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
         <meta name="format-detection" content="telephone=no"/>
